// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OtpInputs /> render 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "height": 53,
            "margin": 10,
          },
          undefined,
          Object {
            "borderColor": "#a0a0a0",
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        clearTextOnFocus={false}
        keyboardType="phone-pad"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        rejectResponderTermination={true}
        secureTextEntry={false}
        selectTextOnFocus={true}
        style={
          Array [
            Object {
              "fontSize": 24,
              "paddingTop": 10,
              "textAlign": "center",
              "width": 40,
            },
            undefined,
            false,
          ]
        }
        textContentType="none"
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "height": 53,
            "margin": 10,
          },
          undefined,
          Object {
            "borderColor": "#a0a0a0",
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        clearTextOnFocus={false}
        keyboardType="phone-pad"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        rejectResponderTermination={true}
        secureTextEntry={false}
        selectTextOnFocus={true}
        style={
          Array [
            Object {
              "fontSize": 24,
              "paddingTop": 10,
              "textAlign": "center",
              "width": 40,
            },
            undefined,
            false,
          ]
        }
        textContentType="none"
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "height": 53,
            "margin": 10,
          },
          undefined,
          Object {
            "borderColor": "#a0a0a0",
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        clearTextOnFocus={false}
        keyboardType="phone-pad"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        rejectResponderTermination={true}
        secureTextEntry={false}
        selectTextOnFocus={true}
        style={
          Array [
            Object {
              "fontSize": 24,
              "paddingTop": 10,
              "textAlign": "center",
              "width": 40,
            },
            undefined,
            false,
          ]
        }
        textContentType="none"
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "height": 53,
            "margin": 10,
          },
          undefined,
          Object {
            "borderColor": "#a0a0a0",
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        clearTextOnFocus={false}
        keyboardType="phone-pad"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        rejectResponderTermination={true}
        secureTextEntry={false}
        selectTextOnFocus={true}
        style={
          Array [
            Object {
              "fontSize": 24,
              "paddingTop": 10,
              "textAlign": "center",
              "width": 40,
            },
            undefined,
            false,
          ]
        }
        textContentType="none"
        underlineColorAndroid="transparent"
      />
    </View>
  </View>
</View>
`;

exports[`<OtpInputs /> rendering with error 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginHorizontal": 25,
        },
        undefined,
      ]
    }
  >
    <Text
      testID="errorText"
    >
      ExampleErrorMessage
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "height": 53,
            "margin": 10,
          },
          undefined,
          Object {
            "borderColor": "#a0a0a0",
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        clearTextOnFocus={false}
        keyboardType="phone-pad"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        rejectResponderTermination={true}
        secureTextEntry={false}
        selectTextOnFocus={true}
        style={
          Array [
            Object {
              "fontSize": 24,
              "paddingTop": 10,
              "textAlign": "center",
              "width": 40,
            },
            undefined,
            Object {
              "color": "#ff0000",
            },
          ]
        }
        textContentType="none"
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "height": 53,
            "margin": 10,
          },
          undefined,
          Object {
            "borderColor": "#a0a0a0",
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        clearTextOnFocus={false}
        keyboardType="phone-pad"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        rejectResponderTermination={true}
        secureTextEntry={false}
        selectTextOnFocus={true}
        style={
          Array [
            Object {
              "fontSize": 24,
              "paddingTop": 10,
              "textAlign": "center",
              "width": 40,
            },
            undefined,
            Object {
              "color": "#ff0000",
            },
          ]
        }
        textContentType="none"
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "height": 53,
            "margin": 10,
          },
          undefined,
          Object {
            "borderColor": "#a0a0a0",
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        clearTextOnFocus={false}
        keyboardType="phone-pad"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        rejectResponderTermination={true}
        secureTextEntry={false}
        selectTextOnFocus={true}
        style={
          Array [
            Object {
              "fontSize": 24,
              "paddingTop": 10,
              "textAlign": "center",
              "width": 40,
            },
            undefined,
            Object {
              "color": "#ff0000",
            },
          ]
        }
        textContentType="none"
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "height": 53,
            "margin": 10,
          },
          undefined,
          Object {
            "borderColor": "#a0a0a0",
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        clearTextOnFocus={false}
        keyboardType="phone-pad"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        rejectResponderTermination={true}
        secureTextEntry={false}
        selectTextOnFocus={true}
        style={
          Array [
            Object {
              "fontSize": 24,
              "paddingTop": 10,
              "textAlign": "center",
              "width": 40,
            },
            undefined,
            Object {
              "color": "#ff0000",
            },
          ]
        }
        textContentType="none"
        underlineColorAndroid="transparent"
      />
    </View>
  </View>
</View>
`;
